--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -11,12 +11,12 @@ jobs:
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
 
       - name: Set up Python
         uses: actions/setup-python@v2
         with:
-          python-version: "3.x"
+          python-version: "3.13"
 
       - name: Install dependencies
         run: |
@@ -25,7 +25,7 @@ jobs:
           pip install -r requirements.txt
 
       - name: Build the package
-        run: python setup.py sdist bdist_wheel
+        run: python setup.py sdist
 
       - name: Publish to PyPI
         env:
