--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -22,7 +22,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install setuptools wheel twine
-          pip install -r requirements.txt
+          pip install -r py3s/requirements.txt
 
       - name: Build the package
         run: python setup.py sdist
