--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -13,6 +13,10 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
+      - name: Save Tag Name
+        id: get_tag
+        run: echo "${GITHUB_REF#refs/tags/}" >> version.txt
+
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
