--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -29,7 +29,7 @@ jobs:
           pip install -r py3s/requirements.txt
 
       - name: Build the package
-        run: python setup.py sdist
+        run: python setup.py sdist bdist_wheel
 
       - name: Publish to PyPI
         env:
