--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -14,8 +14,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Save Tag Name
-        id: get_tag
-        run: echo "${GITHUB_REF#refs/tags/}" >> version.txt
+        run: export PYPI_MODULE_PY3S_VERSION="${GITHUB_REF#refs/tags/}"
 
       - name: Set up Python
         uses: actions/setup-python@v5
