--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -15,6 +15,8 @@ jobs:
 
       - name: Save Tag Name
         run: export PYPI_MODULE_PY3S_VERSION="${GITHUB_REF#refs/tags/}"
+        env:
+          PYPI_MODULE_PY3S_VERSION: ${{ env.PYPI_MODULE_PY3S_VERSION }}
 
       - name: Set up Python
         uses: actions/setup-python@v5
