--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -14,7 +14,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Save Tag Name
-        run: export PYPI_MODULE_PY3S_VERSION="${GITHUB_REF#refs/tags/}"
+        run: echo PYPI_MODULE_PY3S_VERSION="${GITHUB_REF#refs/tags/}" >> $GITHUB_ENV
 
       - name: Set up Python
         uses: actions/setup-python@v5
